# deep-research-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCH.md  CLAUDE.md  GEMINI.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  update.sh
.github/workflows/: ci.yml
cli/: agent-cli.py  clarification-cli.py  client-cli.py  complex-cli.py  config-cli.py  debug-cli.py  deep-research-cli.py  deep-research-tui.py  list-models-cli.py  simple-cli.py
docs/: trim-tui-demo-gif.sh  tui-demo.tape
examples/: anthropic_example.py
guidelines/: CLAUDE-CODE-MCP-GUIDELINE.md  CODEX-MCP-GUIDELINE.md  FASTMCP-GUIDELINE.md  MCP-PYTHON-GUIDELINE.md
skill/: deep-research-mcp.md  deep-research.md
skills/: deep-research-mcp.md  deep-research.md
skills/deep-research-mcp/: SKILL.md
src/deep_research_mcp/: __init__.py  agent.py  async_utils.py  clarification.py  config.py  errors.py  mcp_server.py  models.py  rate_limiter.py  results.py
src/deep_research_mcp/backends/: __init__.py  base.py  dr_tulu_backend.py  gemini_backend.py  open_deep_research_backend.py  openai_backend.py
src/deep_research_mcp/prompts/: __init__.py  prompts.py
tests/: __init__.py  conftest.py  test_agents.py  test_async_utils.py  test_clarification.py  test_config.py  test_core_functionality.py  test_core_functionality_pytest.py  test_mcp_integration.py  test_mcp_server_list_models.py  test_prompts.py  test_rate_limiter.py  test_results.py  test_toml_config.py  test_tui_app.py  test_tui_helpers.py  test_tui_unit.py  tui_test_utils.py
(+3 files in other folders)
